[package]
name = "crossword2"
version = "0.1.0"
authors = ["nathan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.0"
itertools = "0.8.0"
byteorder = "1.3.2"
unidecode = "0.3.0"
arrayvec = "0.4.11"
priority-queue = "0.6.0"
xi-unicode = "0.2.0"
unicode-segmentation = "1.3.0"
encoding = "0.2.33"
slice-group-by = "0.2.6"
lazy_static = "1.3.0"
csv = "1.1"
rand = "0.7.2"